--- a/chokotei.html
+++ b/chokotei.html
@@ -246,6 +246,25 @@
     <span class="hint" id="marksHint">（クリックでも即保存＆反映します）</span>
   </div>
 </div>
+<!-- トピックス検出の閾値 -->
+<div style="margin-top:14px;padding-top:14px;border-top:1px dashed var(--border-color);">
+  <div class="section-title">🔥 トピックス検出の閾値</div>
+  <div class="row" style="gap:8px;flex-wrap:wrap">
+    <label class="hint">基準日数</label>
+    <input type="number" id="topicBaselineDays" value="7" min="3" max="30" style="width:84px">
+    <label class="hint">急増倍率 ≥</label>
+    <input type="number" id="topicLiftMin" value="1.5" step="0.1" style="width:84px">
+    <label class="hint">急増絶対値 ≥</label>
+    <input type="number" id="topicAbsMin" value="8" step="1" style="width:84px">
+    <label class="hint">連続増加日数</label>
+    <input type="number" id="topicConsecDays" value="3" min="3" max="7" style="width:84px">
+    <label class="hint">最小日件数</label>
+    <input type="number" id="topicMinDaily" value="2" step="1" style="width:84px">
+    <label class="hint">最大表示件数</label>
+    <input type="number" id="topicMaxCards" value="5" min="1" max="12" style="width:84px">
+    <button class="btn" id="btnTopicsApply">🔎 再判定</button>
+  </div>
+</div>
 
 
   <div class="loading" id="loading">
@@ -254,6 +273,14 @@
   </div>
 
   <div class="content" id="content" style="display:none">
+    <!-- 🔥 トピックス（急増・連続増加） -->
+<div class="panel" id="panelTopics" style="margin-bottom:12px;display:none">
+  <h3>🔥 トピックス（急増・連続増加）
+    <span class="hint" id="topicsHint" style="margin-left:6px"></span>
+  </h3>
+  <div class="cards" id="topicsCards"></div>
+</div>
+
 <!-- TOP: 直近48h（そのまま） -->
 <div class="grid grid-2">
   <div class="panel">
@@ -520,6 +547,8 @@ const COLORS = ['#ef4444','#22c55e','#3b82f6','#f59e0b','#a855f7','#06b6d4','#ea
 const $ = (id)=>document.getElementById(id);
 const fmt = (n)=>n.toLocaleString();
 const debounce = (fn,ms=150)=>{ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn(...a),ms); }; };
+const DEFAULT_TOPICS = { baselineDays:7, liftMin:1.5, absMin:8, consecDays:3, minDaily:2, maxCards:5 };
+let topicsConfig = { ...DEFAULT_TOPICS };
 
 /* ====== テーマ管理 ====== */
 function initTheme() {
@@ -631,6 +660,22 @@ function loadFileConfig(filename) {
   }
 }
 
+function loadFileConfig(filename) {
+  const key = getFileKey(filename);
+  try {
+    const configs = JSON.parse(localStorage.getItem(LS_FILE_CONFIGS) || '{}');
+    const config = configs[key] || { marked: [], ignored: [], memos: {} };
+    marked = new Set((config.marked || []).filter(x => typeof x === 'string'));
+    ignored = new Set((config.ignored || []).filter(x => typeof x === 'string'));
+    memos  = (config.memos && typeof config.memos === 'object') ? config.memos : {};
++   topicsConfig = { ...DEFAULT_TOPICS, ...(config.topicsConfig || {}) };
+    console.log(`設定読み込み: ${filename} => マーク:${marked.size}, 無視:${ignored.size}, メモ項目数:${Object.keys(memos).length}`);
+  } catch {
+    marked = new Set(); ignored = new Set(); memos = {};
++   topicsConfig = { ...DEFAULT_TOPICS };
+  }
+}
+
 function saveFileConfig(filename) {
   const key = getFileKey(filename);
   try {
@@ -638,7 +683,8 @@ function saveFileConfig(filename) {
     configs[key] = {
       marked: [...marked],
       ignored: [...ignored],
-      memos, // 追加
+      memos,
++     topicsConfig,
       lastUpdated: new Date().toISOString()
     };
     localStorage.setItem(LS_FILE_CONFIGS, JSON.stringify(configs));
@@ -770,6 +816,40 @@ window.addEventListener('DOMContentLoaded', async () => {
     });
   }
 });
+// トピックス閾値UI 初期化＆バインド
+const ids = ['topicBaselineDays','topicLiftMin','topicAbsMin','topicConsecDays','topicMinDaily','topicMaxCards'];
+const applyTopicsForm = () => {
+  const num = id => Number(document.getElementById(id)?.value ?? topicsConfig[id] ?? 0);
+
+  topicsConfig = {
+    baselineDays: num('topicBaselineDays'),
+    liftMin:      num('topicLiftMin'),
+    absMin:       num('topicAbsMin'),
+    consecDays:   num('topicConsecDays'),
+    minDaily:     num('topicMinDaily'),
+    maxCards:     num('topicMaxCards'),
+  };
+  if (currentFileName) saveFileConfig(currentFileName);
+  renderTopics();
+};
+ids.forEach(id=>{
+  const el = document.getElementById(id);
+  if (el) {
+    // 保存済み値を反映
+    const map = {
+      topicBaselineDays: topicsConfig.baselineDays,
+      topicLiftMin:      topicsConfig.liftMin,
+      topicAbsMin:       topicsConfig.absMin,
+      topicConsecDays:   topicsConfig.consecDays,
+      topicMinDaily:     topicsConfig.minDaily,
+      topicMaxCards:     topicsConfig.maxCards,
+    };
+    el.value = map[id];
+    el.addEventListener('change', applyTopicsForm);
+    el.addEventListener('input',  debounce(applyTopicsForm, 200));
+  }
+});
+document.getElementById('btnTopicsApply')?.addEventListener('click', applyTopicsForm);
 
 /* ====== 解析＆レンダリング ====== */
 async function parseAndRender(text){
@@ -827,6 +907,114 @@ function normalizeHeaders(rows){
   const hmap = Object.fromEntries(Object.keys(rows[0]).map(k=>[k,map(k)]));
   return rows.map(r=>{
     const o={}; for(const k in r){ o[hmap[k]]=r[k]; } return o;
+  });
+}
+function computeTopics() {
+  const rows = filteredRows();
+  if (!rows.length) return { items: [], lastKey: null, lastLabel: null };
+
+  const { periods, byMsg } = groupByPeriod('day');
+  if (!periods.length) return { items: [], lastKey: null, lastLabel: null };
+
+  const keys = periods.map(p => p.key);
+  const labels = periods.map(p => p.label);
+  const lastIdx = keys.length - 1;
+  if (lastIdx < 0) return { items: [], lastKey: null, lastLabel: null };
+
+  const baselineDays = Math.max(1, topicsConfig.baselineDays|0);
+  const consecNeed   = Math.max(3, topicsConfig.consecDays|0);
+  const minDaily     = Math.max(0, topicsConfig.minDaily|0);
+  const maxCards     = Math.max(1, topicsConfig.maxCards|0);
+
+  const items = [];
+  for (const [msg, obj] of byMsg.entries()) {
+    // 対象メッセージの全日系列
+    const yAll = keys.map(k => obj[k] || 0);
+    if (yAll.length < Math.max(baselineDays+1, consecNeed)) continue;
+
+    const last = yAll[lastIdx];
+
+    // ベースライン（直近日を除く baselineDays 日）
+    const baseStart = Math.max(0, lastIdx - baselineDays);
+    const baseSlice = yAll.slice(baseStart, lastIdx);
+    const baseMean  = baseSlice.length ? (baseSlice.reduce((a,b)=>a+b,0) / baseSlice.length) : 0;
+
+    // ── 条件1: 急増（倍率 or 絶対値）
+    const surgeByLift = baseMean > 0 && last >= topicsConfig.liftMin * baseMean;
+    const surgeByAbs  = last >= topicsConfig.absMin;
+    const isSurge     = surgeByLift || surgeByAbs;
+
+    // ── 条件2: 連続増加（直近 N 日で単調増加＆各日が閾値以上）
+    let isConsec = false;
+    if (yAll.length >= consecNeed) {
+      const tail = yAll.slice(-consecNeed);
+      isConsec = tail.every((v,i)=> (i===0 || v > tail[i-1])) && tail.every(v => v >= minDaily);
+    }
+
+    if (!(isSurge || isConsec)) continue;
+
+    // スコア（並び順用）：急増寄与 + 連続増加ボーナス
+    const lift = baseMean > 0 ? (last / Math.max(1, baseMean)) : 1;
+    let score = last * (surgeByLift ? lift : 1);
+    if (isConsec) score += 10 + 2 * (consecNeed); // 連増ボーナス
+
+    const labelsView = labels.slice(-14);
+    const yView      = yAll.slice(-14);
+
+    items.push({
+      msg,
+      yAll, labelsAll: labels,
+      y: yView, labels: labelsView,
+      last, baseMean, lift,
+      surgeByLift, surgeByAbs, isConsec,
+      score
+    });
+  }
+
+  items.sort((a,b)=> b.score - a.score);
+  return { items: items.slice(0, maxCards), lastKey: keys[lastIdx], lastLabel: labels[lastIdx] };
+}
+
+function renderTopics() {
+  const panel = document.getElementById('panelTopics');
+  const cards = document.getElementById('topicsCards');
+  const hint  = document.getElementById('topicsHint');
+  if (!panel || !cards) return;
+
+  const { items, lastLabel } = computeTopics();
+  cards.innerHTML = '';
+
+  if (!items.length) {
+    panel.style.display = 'none';
+    return;
+  }
+  panel.style.display = 'block';
+  hint.textContent = lastLabel ? `対象日：${lastLabel}` : '';
+
+  items.forEach(it => {
+    const badges = [];
+    if (it.surgeByLift) badges.push(`📈 急増×倍率(${it.lift.toFixed(2)}x)`);
+    if (it.surgeByAbs)  badges.push(`🔢 急増×絶対(${it.last})`);
+    if (it.isConsec)    badges.push(`⤴️ ${topicsConfig.consecDays}日連続増加`);
+
+    const card = document.createElement('div');
+    card.className = 'card trend-up';
+    card.innerHTML = `
+      <div style="display:flex;align-items:center;justify-content:space-between;gap:8px">
+        <div style="font-size:${fs(14)}px;color:var(--text-primary)">${it.msg}</div>
+        <div style="display:flex;gap:6px;flex-wrap:wrap">
+          ${badges.map(b=>`<span class="tag">${b}</span>`).join('')}
+        </div>
+      </div>
+      <div class="hint" style="margin-top:6px">
+        昨日比: ${it.last} ／ ベース平均(${topicsConfig.baselineDays}日): ${it.baseMean.toFixed(2)}
+      </div>
+      <svg class="svg-s"></svg>
+    `;
+    card.addEventListener('click', () => openDetail(it.msg, 'day'));
+    const svg = card.querySelector('svg');
+    drawMiniLineWithAxes(svg, it.labels, it.y, { showValues:true });
+    cards.appendChild(card);
   });
 }
 
@@ -1765,7 +1953,7 @@ function drawMiniLineWithAxes(svgEl, labels, y, opts={}){
 }
 
 /* ====== 全レンダー/イベント ====== */
-function renderAll(){ render48h(); renderTrends(); renderMarked(); }
+function renderAll(){ renderTopics(); render48h(); renderTrends(); renderMarked(); }
 $('granularity').addEventListener('change', ()=> renderTrends());
 
 /* 初期（設定UIだけ用意） */
