--- a/chokotei.html
+++ b/chokotei.html
@@ -668,11 +668,11 @@ function loadFileConfig(filename) {
     marked = new Set((config.marked || []).filter(x => typeof x === 'string'));
     ignored = new Set((config.ignored || []).filter(x => typeof x === 'string'));
     memos  = (config.memos && typeof config.memos === 'object') ? config.memos : {};
-+   topicsConfig = { ...DEFAULT_TOPICS, ...(config.topicsConfig || {}) };
+   topicsConfig = { ...DEFAULT_TOPICS, ...(config.topicsConfig || {}) };
     console.log(`設定読み込み: ${filename} => マーク:${marked.size}, 無視:${ignored.size}, メモ項目数:${Object.keys(memos).length}`);
   } catch {
     marked = new Set(); ignored = new Set(); memos = {};
-+   topicsConfig = { ...DEFAULT_TOPICS };
+   topicsConfig = { ...DEFAULT_TOPICS };
   }
 }
 
@@ -684,7 +684,7 @@ function saveFileConfig(filename) {
       marked: [...marked],
       ignored: [...ignored],
       memos,
-+     topicsConfig,
+     topicsConfig,
       lastUpdated: new Date().toISOString()
     };
     localStorage.setItem(LS_FILE_CONFIGS, JSON.stringify(configs));
