--- a/abnreports.html
+++ b/abnreports.html
@@ -433,7 +433,7 @@
           <label>発見タイミング *</label>
           <select id="discoveryTiming" required>
             <option value="">選択</option>
-            <option value="運転中">運転中</option>
+            <option value="生産中">生産中</option>
             <option value="頭出し">頭出し</option>
             <option value="初物">初物</option>
             <option value="終物">終物</option>
@@ -2787,7 +2787,7 @@ const editModalHtml = `
       <div class="form-group"><label>発見タイミング</label>
         <select id="edit_discoveryTiming">
           <option value="">選択</option>
-          <option value="運転中">運転中</option>
+          <option value="生産中">生産中</option>
           <option value="頭出し">頭出し</option>
           <option value="初物">初物</option>
           <option value="終物">終物</option>
