--- a/abnreports.html
+++ b/abnreports.html
@@ -1010,7 +1010,7 @@ document.addEventListener('click', (e)=>{
     (async ()=>{ await refreshManufacturing(); alert('発信部署タブを更新しました'); })();
   }
   if (e.target && e.target.id === 'btnRefreshTech'){
-    (async ()=>{ await refreshTechnical(); alert('技術タブを更新しました'); })();
+    (async ()=>{ await refreshTechnical();  })();
   }
   if (e.target && e.target.id === 'btnRefreshHistory'){
     (async ()=>{ await refreshHistory(); alert('履歴を更新しました'); })();
