--- a/abnreports.html
+++ b/abnreports.html
@@ -3065,7 +3065,13 @@ function displayEditExistingPhotos(kind, urls) {
      document.getElementById('editPhotos').style.display = (tab==='photos')? 'block' : 'none';
     }
     const ed = t.closest('button.btn-edit[data-edit]'); if (ed){ openEdit(ed.getAttribute('data-edit')); }
-    const del= t.closest('button.btn-delete[data-del]'); if (del){ deleteRecord(del.getAttribute('data-del')); }
+    const del = t.closest('button.btn-delete[data-del]');
+if (del){
+  const id = del.getAttribute('data-del');
+  if (confirm('このレコードを削除しますか？\n（写真もすべて削除されます）')) {
+    deleteRecord(id);
+  }
+}
     const photos = t.closest('button[data-photos]'); if (photos){ showPhotos(photos.getAttribute('data-photos')); }
   });
   document.getElementById('btnEditCancel').addEventListener('click', ()=>{
@@ -3390,11 +3396,16 @@ async function deleteRecord(id){
     document.getElementById('newDepartment').value='';
     updateDepartmentList();
   });
-  document.addEventListener('click', async (e)=>{
-    const del=e.target.closest('button[data-del-dept]'); if (!del) return;
-    await deleteDoc(doc(db,'masters','department','items', del.getAttribute('data-del-dept')));
-    updateDepartmentList();
-  });
+document.addEventListener('click', async (e)=>{
+  const del = e.target.closest('button[data-del-dept]');
+  if (!del) return;
+
+  if (!confirm('この部署を削除しますか？\n（紐づくラインや処置者にも影響します）')) return;
+
+  await deleteDoc(doc(db,'masters','department','items', del.getAttribute('data-del-dept')));
+  updateDepartmentList();
+});
+
 
   async function updateLineManageList(){
     const dept=document.getElementById('lineManageDept').value;
@@ -3422,12 +3433,17 @@ async function deleteRecord(id){
     mastersCache = await fetchMasters();
     await updateLineManageList();
   });
-  document.addEventListener('click', async (e)=>{
-    const del=e.target.closest('button[data-del-line]'); if (!del) return;
-    await deleteDoc(doc(db,'masters','line','items', del.getAttribute('data-del-line')));
-    mastersCache = await fetchMasters();
-    await updateLineManageList();
-  });
+document.addEventListener('click', async (e)=>{
+  const del = e.target.closest('button[data-del-line]');
+  if (!del) return;
+
+  if (!confirm('このライン名を削除しますか？')) return;
+
+  await deleteDoc(doc(db,'masters','line','items', del.getAttribute('data-del-line')));
+  mastersCache = await fetchMasters();
+  await updateLineManageList();
+});
+
 
   async function updateHandlerManageList(){
     const dept=document.getElementById('handlerManageDept').value;
