abnreports.html を更新

--- a/abnreports.html
+++ b/abnreports.html
@@ -332,6 +332,202 @@
   .similar-photos{margin-top:8px;display:grid;grid-template-columns:repeat(4,1fr);gap:6px;}
   .similar-photos .thumb{aspect-ratio:1;overflow:hidden;border-radius:4px;box-shadow:0 1px 3px rgba(0,0,0,.1);cursor:pointer;}
   .similar-photos .thumb img{width:100%;height:100%;object-fit:cover;}
+/* ===== 履歴カード見やすさ向上パッチ ===== */
+
+/* カード全体：余白＆背景を少しだけ落ち着かせる */
+.card-view{
+  display:grid;
+  gap:14px;
+}
+
+/* カード本体 */
+.anomaly-card{
+  position:relative;
+  background:#ffffff;
+  border-radius:10px;
+  padding:16px 18px;
+  box-shadow:0 3px 10px rgba(0,0,0,.08);
+  border-left:5px solid #667eea;
+  display:grid;
+  grid-template-columns: 210px minmax(0, 1.6fr) 180px;
+  column-gap:18px;
+  row-gap:10px;
+  align-items:flex-start;
+}
+
+.anomaly-card.complete{
+  border-left-color:#28a745;
+}
+
+/* 左カラム：整理Noと状態を“塊”で見せる */
+.card-left{
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+  padding-right:8px;
+  border-right:1px dashed #e0e0e0;
+}
+
+.card-id{
+  font-size:1.05rem;
+  font-weight:700;
+  color:#3949ab;
+  padding:2px 0;
+}
+
+.card-status{
+  padding:4px 10px;
+  border-radius:999px;
+  font-size:.8rem;
+  font-weight:700;
+  text-align:center;
+  width:fit-content;
+}
+
+/* メタ情報を「ラベル：値」で揃える */
+.card-meta{
+  margin-top:4px;
+  display:grid;
+  gap:4px;
+  font-size:.85rem;
+}
+
+.card-meta-item{
+  display:flex;
+  flex-direction:row;
+  gap:6px;
+}
+
+.card-meta-label{
+  font-size:.75rem;
+  color:#888;
+  min-width:70px;
+}
+
+.card-meta-value{
+  color:#333;
+  font-weight:500;
+}
+
+/* 中央カラム：異常内容・対応内容を箱で囲って読みやすく */
+.card-center{
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+  min-width:0;
+}
+
+.card-content-section{
+  background:#f9fafc;
+  border-radius:6px;
+  padding:8px 10px;
+  border:1px solid #e3e6f0;
+}
+
+.card-content-label{
+  font-size:.8rem;
+  font-weight:700;
+  color:#667eea;
+  margin-bottom:4px;
+}
+
+.card-content-text{
+  color:#333;
+  line-height:1.7;
+  font-size:.9rem;
+  white-space:pre-wrap;       /* 改行をそのまま表示 */
+}
+
+/* 技術情報ブロックも少しだけメリハリを */
+.card-tech-info{
+  background:#fffdf5;
+  padding:10px;
+  border-radius:6px;
+  border-left:3px solid #f57c00;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+  gap:6px 10px;
+  font-size:.8rem;
+}
+
+.tech-info-item{
+  display:flex;
+  gap:6px;
+}
+
+/* 右カラム：サムネとボタンのまとまりをはっきり */
+.card-right{
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+  align-items:flex-end;
+}
+
+.card-photos-compact{
+  display:grid;
+  grid-template-columns:repeat(2, 1fr);
+  gap:6px;
+}
+
+.photo-thumb-compact{
+  aspect-ratio:1;
+  border-radius:6px;
+  overflow:hidden;
+  box-shadow:0 1px 4px rgba(0,0,0,.16);
+  cursor:pointer;
+}
+
+.photo-thumb-compact img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+
+.photo-count-badge{
+  margin-top:4px;
+  font-size:.8rem;
+  color:#555;
+}
+
+/* アクションボタンを右下に寄せる */
+.action-btns{
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+}
+
+/* 停止時間バッジ：視線に入りやすいように少し大きく */
+.stop-badge{
+  position:absolute;
+  right:16px;
+  top:16px;
+  padding:5px 12px;
+  border-radius:14px;
+  font-weight:700;
+  font-size:.8rem;
+  color:#fff;
+  background:#1976d2;
+  box-shadow:0 2px 6px rgba(0,0,0,.2);
+}
+
+/* スマホ時は1カラムに崩して読みやすく */
+@media (max-width:900px){
+  .anomaly-card{
+    grid-template-columns:1fr;
+  }
+  .card-left{
+    border-right:none;
+    border-bottom:1px dashed #e0e0e0;
+    padding-bottom:8px;
+    margin-bottom:6px;
+  }
+  .card-right{
+    align-items:flex-start;
+    flex-direction:row;
+    justify-content:space-between;
+  }
+}
+
 </style>
 </head>
 <body>
