abnreports.html を更新

--- a/abnreports.html
+++ b/abnreports.html
@@ -332,7 +332,58 @@
   .similar-photos{margin-top:8px;display:grid;grid-template-columns:repeat(4,1fr);gap:6px;}
   .similar-photos .thumb{aspect-ratio:1;overflow:hidden;border-radius:4px;box-shadow:0 1px 3px rgba(0,0,0,.1);cursor:pointer;}
   .similar-photos .thumb img{width:100%;height:100%;object-fit:cover;}
+/* ==== 履歴カードの見た目 微調整パッチ ==== */
 
+/* カード全体：少しだけ詰める */
+.anomaly-card{
+  padding:16px 16px 14px;            /* 20px → 16pxくらいに */
+  grid-template-columns: 180px 1fr 150px; /* ほんの少しコンパクトに */
+}
+
+/* メタ情報はもう少し小さく・行間もやや詰める */
+.card-meta{
+  gap:4px;
+  font-size:.85rem;
+}
+.card-content-text{
+  font-size:.9rem;
+  line-height:1.5;
+}
+
+/* ボタンまわり：横並び + 小さめにして存在感を軽く */
+.card-right{
+  gap:8px;
+}
+.action-btns{
+  flex-direction:row;
+  justify-content:flex-end;
+  gap:8px;
+}
+.btn-small{
+  padding:6px 10px;
+  font-size:.8rem;
+  min-width:80px;
+}
+
+/* 削除ボタンを“真っ赤なべったり”から少し軽めに */
+.btn-delete{
+  background:#fff;
+  color:#dc3545;
+  border:1px solid #dc3545;
+}
+.btn-delete:hover{
+  background:#dc3545;
+  color:#fff;
+}
+
+/* 停止時間バッジをカードのヘッダー側へ移動 */
+.stop-badge{
+  top:16px;
+  bottom:auto;
+  right:16px;
+  font-size:.8rem;
+  padding:4px 10px;
+}
 
 </style>
 </head>
