abnreports.html を更新

--- a/abnreports.html
+++ b/abnreports.html
@@ -384,7 +384,58 @@
   font-size:.8rem;
   padding:4px 10px;
 }
+/* ==== 履歴カード レイアウト崩れリセット用パッチ ==== */
 
+/* PC 基本レイアウトの再定義（念のため） */
+.anomaly-card{
+  position:relative;
+  background:#fff;
+  border-radius:8px;
+  padding:20px;
+  box-shadow:0 2px 8px rgba(0,0,0,.1);
+  border-left:4px solid #667eea;
+  display:grid;
+  grid-template-columns: 200px 1fr 180px;
+  gap:20px;
+  align-items:flex-start;
+}
+
+/* 右カラム：縦に並べる */
+.card-right{
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  align-items:stretch;
+}
+
+/* ボタンも縦並び＆カード内に収める */
+.action-btns{
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+}
+.btn-small{
+  width:100%;
+}
+
+/* 停止バッジは右下固定（ボタンと重ならない） */
+.stop-badge{
+  position:absolute;
+  right:16px;
+  bottom:16px;
+  top:auto;
+}
+
+/* スマホ時は 1 カラムにして、縦長になりすぎないように */
+@media (max-width:900px){
+  .anomaly-card{
+    grid-template-columns:1fr;
+    gap:16px;
+  }
+  .card-right{
+    flex-direction:column;
+  }
+}
 </style>
 </head>
 <body>
