abnreports.html を更新

--- a/abnreports.html
+++ b/abnreports.html
@@ -433,9 +433,85 @@
     gap:16px;
   }
   .card-right{
-    flex-direction:column;
+    flex-direction:/* ===== 履歴カードの見た目だけ読みやすくするパッチ ===== */
+
+/* カード全体を少しだけ区切る */
+.anomaly-card{
+  margin-bottom:16px;
+  grid-template-columns: 190px 1fr 150px; /* 右カラムを少し細くして本文スペースを広く */
+}
+
+/* 左・中央・右をうっすら区切る */
+.card-left{
+  border-right:1px solid #f0f0f0;
+  padding-right:10px;
+}
+.card-center{
+  border-right:1px dashed #f0f0f0;
+  padding-right:10px;
+}
+
+/* 整理Noとステータスを少し強調 */
+.card-id{
+  font-size:1.1rem;
+  margin-bottom:6px;
+}
+.card-status{
+  margin-bottom:8px;
+}
+
+/* 異常内容／対応内容のブロックを「枠付きボックス」に */
+.card-content-section{
+  background:#fafafa;
+  border-radius:6px;
+  padding:8px 10px;
+}
+.card-content-section + .card-content-section{
+  margin-top:6px;
+}
+.card-content-label{
+  font-size:.8rem;
+  color:#667eea;
+}
+.card-content-text{
+  font-size:.9rem;
+  line-height:1.6;
+}
+
+/* 右カラム：ボタンをカード下側にそろえる＋スッキリ */
+.card-right{
+  align-items:stretch;
+}
+.action-btns{
+  margin-top:auto;
+}
+
+/* 停止バッジはカード右上に固定して、ボタンと被らないように */
+.stop-badge{
+  top:16px;
+  right:16px;
+  bottom:auto;
+}
+
+/* スマホ時は1カラム＋区切り線だけ残す */
+@media (max-width:900px){
+  .anomaly-card{
+    grid-template-columns:1fr;
+  }
+  .card-left{
+    border-right:none;
+    border-bottom:1px solid #f0f0f0;
+    padding-right:0;
+    padding-bottom:8px;
+    margin-bottom:8px;
+  }
+  .card-center{
+    border-right:none;
+    padding-right:0;
   }
 }
+
+
 </style>
 </head>
 <body>
