--- a/abnreports.html
+++ b/abnreports.html
@@ -511,7 +511,58 @@
   }
 }
 
+/* ===== 履歴カードを少し見やすくするパッチ（HTML変更なし） ===== */
 
+/* 整理Noとステータスまわりを少し強調 */
+.card-id{
+  font-size:1.1rem;
+  color:#2962ff;
+  margin-bottom:6px;
+}
+.card-status{
+  margin-top:2px;
+  margin-bottom:10px;
+}
+
+/* 中央の「異常内容」「対応内容」を枠付きボックスにする */
+.card-center .card-content-section{
+  background:#fafafa;
+  border-radius:6px;
+  padding:8px 10px;
+  border:1px solid #eee;
+}
+
+/* 1つ目＝異常内容：少しだけ赤系のアクセント */
+.card-center .card-content-section:nth-of-type(1){
+  border-left:4px solid #ff7043;
+  background:#fff7f3;
+}
+
+/* 2つ目＝対応内容：青系アクセント */
+.card-center .card-content-section:nth-of-type(2){
+  border-left:4px solid #42a5f5;
+  background:#f3f8ff;
+}
+
+/* 見出しの文字も少しだけ強調 */
+.card-content-label{
+  font-size:.8rem;
+  font-weight:700;
+}
+
+/* 停止バッジはカード右上固定（削除ボタンと被らないように） */
+.stop-badge{
+  top:16px;
+  right:16px;
+  bottom:auto;
+}
+
+/* スマホ時：カード間の余白を少し増やす */
+@media (max-width:900px){
+  .anomaly-card{
+    margin-bottom:16px;
+  }
+}
 </style>
 </head>
 <body>
