--- a/abnreports.html
+++ b/abnreports.html
@@ -332,6 +332,29 @@
   .similar-photos{margin-top:8px;display:grid;grid-template-columns:repeat(4,1fr);gap:6px;}
   .similar-photos .thumb{aspect-ratio:1;overflow:hidden;border-radius:4px;box-shadow:0 1px 3px rgba(0,0,0,.1);cursor:pointer;}
   .similar-photos .thumb img{width:100%;height:100%;object-fit:cover;}
+.recurrence-badge{
+  display:inline-flex;               /* インライン扱い */
+  align-items:center;
+  justify-content:center;
+  padding:2px 10px;                  /* 横幅を抑えめに */
+  border-radius:999px;
+  font-size:.80rem;
+  font-weight:500;
+  background:#e8f5e9;
+  color:#1b5e20;
+  align-self:flex-start;             /* ← ここがポイント：横いっぱいに伸びない */
+}
+
+/* 再発のときだけ色を変える */
+.recurrence-badge.recurrence-repeat{
+  background:#ffebee;
+  color:#b71c1c;
+}
+.recurrence-badge.recurrence-new{
+  background:#e8f5e9;
+  color:#1b5e20;
+}
+
 
 </style>
 </head>
@@ -2391,11 +2414,16 @@ function renderHistory(){
       const stopBadge = (stopMin !== null)
         ? `<div class="stop-badge ${badgeCls}">停止：${stopMin}分</div>`
         : '';
-
+  const recurrenceBadge = item.recurrenceType
+    ? `<div class="recurrence-badge recurrence-${item.recurrenceType === '再発' ? 'repeat' : 'new'}">
+         ${item.recurrenceType === '再発' ? '再発' : '新規'}
+       </div>`
+    : '';
       const leftHtml = `
         <div class="card-left">
           <div class="card-id">${item.serialNo || '(No ID)'}</div>
           <div class="card-status ${status.cls}">${status.text}</div>
+           ${recurrenceBadge} 
           <div class="card-meta">
             ${item.department ? `
               <div class="card-meta-item">
@@ -2449,7 +2477,7 @@ function renderHistory(){
             <div class="card-tech-info">
               ${item.techHandler ? `<div class="tech-info-item"><span class="tech-info-label">技術処置者:</span><span class="tech-info-value">${item.techHandler}</span></div>` : ''}
               ${item.maintenanceUnit ? `<div class="tech-info-item"><span class="tech-info-label">保全単位:</span><span class="tech-info-value">${item.maintenanceUnit}</span></div>` : ''}
-              ${item.recurrenceType ? `<div class="tech-info-item"><span class="tech-info-label">分類:</span><span class="tech-info-value">${item.recurrenceType}</span></div>` : ''}
+              
               ${item.lifespan ? `<div class="tech-info-item"><span class="tech-info-label">命数:</span><span class="tech-info-value">${item.lifespan}</span></div>` : ''}
               ${item.rootCauseAction ? `<div class="tech-info-item" style="grid-column:1/-1;"><span class="tech-info-label">技術対応内容:</span><span class="tech-info-value">${item.rootCauseAction}</span></div>` : ''}
               ${(item.recurrenceType==='再発' && item.measureStatus)
