--- a/techviewer.html
+++ b/techviewer.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>保全単位別 異常解析ツール</title>
+<title>技術向け 異常解析ツール</title>
 <style>
   :root{
     --pill-scale: 1;
@@ -452,7 +452,7 @@
 <body>
   <div class="header">
     <div class="header-content">
-      <h1>🔧 保全単位別 異常解析ツール（切替可能）</h1>
+      <h1>🔧 技術向け 異常解析ツール</h1>
       <div class="header-actions">
         <button class="btn-header" id="btnTheme">🌙 ダーク</button>
         <button class="btn-header" id="btnExport">📥 CSV出力</button>
