--- a/techviewer.html
+++ b/techviewer.html
@@ -665,7 +665,7 @@
     { id:'status', label:'状態', sortable:true }
   ];
 
-  let visibleColumns = ['serialNo','maintenanceUnit','department','lineName','occurrenceDate','occurrenceTime','anomalyContent','actionTaken','rootCauseAction','photos','status'];
+  let visibleColumns = ['occurrenceDate','occurrenceTime','department','lineName','serialNo','anomalyContent','actionTaken','rootCauseAction','photos','maintenanceUnit','status'];
 
   /* ユーティリティ */
   const pad2 = n => String(n).padStart(2,'0');
