--- a/techviewer.html
+++ b/techviewer.html
@@ -641,7 +641,7 @@
   let currentSort   = { column:null, direction:'asc' };
   let displayLimit  = 25;
   let serialChart   = null;
-  let maintenanceUnitMode = 'withMU'; // 'withMU' or 'all'
+  let maintenanceUnitMode = 'all';  // 'withMU' or 'all'
   let unsubscribeAnomalies = null;
 
   const allColumns = [
