--- a/techviewer.html
+++ b/techviewer.html
@@ -1370,7 +1370,7 @@
             } else if (col.id === 'occurrenceTime'){
               v = item.occurrenceTimeNorm || '-';
             } else if (col.id === 'status'){
-              const statusText = (item.status === 'complete') ? '完了' : '技術入力待ち';
+              const statusText = (item.status === 'complete') ? '完了' : '入力待ち';
               const statusCls  = (item.status === 'complete') ? 'status-complete' : 'status-pending';
               v = `<span class="status-badge ${statusCls}">${statusText}</span>`;
             } else if (col.id === 'photos'){
@@ -1458,7 +1458,7 @@
         let v = it[col.id] ?? '';
         if (col.id === 'occurrenceDate') v = it.occurrenceDateISO || it.createdAtISO || '';
         else if (col.id === 'occurrenceTime') v = it.occurrenceTimeNorm || '';
-        else if (col.id === 'status') v = (it.status === 'complete' ? '完了' : '技術入力待ち');
+        else if (col.id === 'status') v = (it.status === 'complete' ? '完了' : '入力待ち');
         else if (col.id === 'photos'){
           const mCnt = (it.mfgPhotoUrls  || []).length;
           const tCnt = (it.techPhotoUrls || []).length;
@@ -1523,7 +1523,7 @@
             <div class="detail-label">状態</div>
             <div class="detail-value">
               <span class="status-badge ${item.status === 'complete' ? 'status-complete' : 'status-pending'}">
-                ${item.status === 'complete' ? '完了' : '技術入力待ち'}
+                ${item.status === 'complete' ? '完了' : '入力待ち'}
               </span>
             </div>
           </div>
